--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
                     <p class="card-text">(Inc. Cut & Style)</p>
                     <table class="table">
                         <tbody>
-                            <tr><td>In Between Foils</td><td>R530</td></tr>
-                            <tr><td>Roots</td><td>R580</td></tr>
+                            <tr><td>In Between Foils</td><td>R580</td></tr>
+                            <tr><td>Roots</td><td>R530</td></tr>
                             <tr><td>Short</td><td>R740</td></tr>
                             <tr><td>Medium</td><td>R840</td></tr>
                             <tr><td>Long</td><td>R950</td></tr>
@@ -235,6 +235,7 @@
                     <h5 class="card-title">Ladies Cut & Style</h5>
                     <table class="table">
                         <tbody>
+                            <tr><td>Under 16</td><td>R150</td></tr>
                             <tr><td>Short</td><td>R200</td></tr>
                             <tr><td>Medium</td><td>R280</td></tr>
                             <tr><td>Long</td><td>R350</td></tr>
@@ -271,9 +272,8 @@
                         <tbody>
                             <tr><td>Kids 0-5</td><td>R50</td></tr>
                             <tr><td>Kids 6-12</td><td>R80</td></tr>
-                            <tr><td>Classic Cut</td><td>R120</td></tr>
-                            <tr><td>Clipper Cut</td><td>R150</td></tr>
-                            <tr><td>Faded Cut</td><td>R200</td></tr>
+                            <tr><td>Clipper Cut</td><td>R120</td></tr>
+                            <tr><td>Faded Cut</td><td>R150</td></tr>
                         </tbody>
                     </table>
                     <div class="button-div position-absolute bottom-0 start-50 translate-middle-x">
